@@ -1,3 +1,8 @@
+2010-05-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44193
+	* g++.dg/template/fntype1.C: New.
+
 2010-04-30  DJ Delorie  <dj@redhat.com>
 
 	* gcc.c-torture/execute/20100430-1.c: New test.
