@@ -1,3 +1,9 @@
+2010-05-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44193
+	* pt.c (tsubst) [TYPENAME_TYPE]: Discard cv-quals on
+	function/reference type.
+
 2010-04-20  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
